Cosmetics.Engine.CosmeticsFactory tested

--- a/Unit Testing/Workshop/Cosmetics.Tests/Cosmetics.Tests.csproj
+++ b/Unit Testing/Workshop/Cosmetics.Tests/Cosmetics.Tests.csproj
@@ -53,6 +53,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CosmeticsEngineTests.cs" />
+    <Compile Include="CosmeticsFactoryTests.cs" />
     <Compile Include="Mocks\MockedCosmeticsEngine.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
